solved bug --over 140 characters, err message, text wrap, hover over logo

--- a/public/styles/new-tweets.css
+++ b/public/styles/new-tweets.css
@@ -43,3 +43,7 @@ footer {
     color: red;
 }
 
+#tweet-content {
+    overflow-wrap: break-word;
+}
+
